force-app/main/default/objects/Contact_Extension__c/Contact_Extension__c.object-meta.xml
<CustomObject>
    <label>Contact Extension</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Contact Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>