force-app/main/default/objects/Contact_Extension__c/fields/AKA_Type__c.field-meta.xml
<CustomField>
    <fullName>AKA_Type__c</fullName>
    <label>AKA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aliss Name</fullName>
            </value>
            <value>
                <fullName>Common Name</fullName>
            </value>
            <value>
                <fullName>Maiden Name</fullName>
            </value>
            <value>
                <fullName>Nick Name</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>