force-app/main/default/objects/Contact_Extension__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <label>Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLSA III</fullName>
                <default>true</default>
                <label>CLSA III</label>
            </value>
            <value>
                <fullName>CLSA IV</fullName>
            </value>
            <value>
                <fullName>CLSA Short</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Re-Assessment</fullName>
            </value>
            <value>
                <fullName>Transition/Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>