force-app/main/default/objects/Contact_Extension__c/fields/Gender_identify__c.field-meta.xml
<CustomField>
    <fullName>Gender_identify__c</fullName>
    <label>Gender Identify</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>