force-app/main/default/objects/Contact_Extension__c/fields/Physical_Build__c.field-meta.xml
<CustomField>
    <fullName>Physical_Build__c</fullName>
    <label>Physical Build</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>