force-app/main/default/objects/Contact_Extension__c/fields/Skin_Tone__c.field-meta.xml
<CustomField>
    <fullName>Skin_Tone__c</fullName>
    <label>Skin Tone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>